Finished implementing getter methods, save/load remaining